# dentexmodel

./: .gitignore  Dockerfile  Pipfile  README.md  docker-compose-cpu.yml  docker-compose.yml  pyproject.toml  setup.cfg
label-interface/: label_interface1.html  label_interface2.html  label_interface_3.html  label_interface_4.html
notebooks/classification/: 01_dentex_download.ipynb  02_create_dataset.ipynb  03_train_val_test_split.ipynb  04_augmentation.ipynb  05_dataloaders.ipynb  06_model_training_basic.ipynb  07_model_training_fancy.ipynb  08_evaluation_metrics.ipynb  09_performance_testdata.ipynb
notebooks/detection/: 01_download_detection.ipynb  02_train_val_test_split_detection.ipynb  03_annotations_detection.ipynb  04_train_detection.ipynb  05_performance_detection.ipynb  1_download_detection.ipynb  2_train_val_test_split_detection.ipynb  3_annotations_detection.ipynb  4_train_detection.ipynb
src/dentexmodel/: cli.py  dentexdata.py  detector.py  skeleton.py
src/dentexmodel/scripts/: dentexutils.py  download_detection.py
